haneda_grammar.output
Terminals unused in grammar

   TYPE_NAME
   TYPEDEF
   EXTERN
   STATIC
   AUTO
   REGISTER
   CHAR
   SHORT
   LONG
   SIGNED
   UNSIGNED
   DOUBLE
   CONST
   VOLATILE
   VOID
   STRUCT
   UNION
   ENUM
   CASE
   DEFAULT
   SWITCH
   GOTO
   BREAK


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | postfix_expression '(' ')'
    8                   | postfix_expression '(' argument_expression_list ')'
    9                   | postfix_expression '.' IDENTIFIER
   10                   | postfix_expression PTR_OP IDENTIFIER
   11                   | postfix_expression INC_OP
   12                   | postfix_expression DEC_OP
   13                   | '(' type_specifier ')' '{' initializer_list '}'
   14                   | '(' type_specifier ')' '{' initializer_list ',' '}'

   15 argument_expression_list: assignment_expression
   16                         | argument_expression_list ',' assignment_expression

   17 unary_expression: postfix_expression
   18                 | INC_OP unary_expression
   19                 | DEC_OP unary_expression
   20                 | unary_operator cast_expression

   21 unary_operator: '&'
   22               | '*'
   23               | '+'
   24               | '-'
   25               | '~'
   26               | '!'

   27 cast_expression: unary_expression
   28                | '(' type_specifier ')' cast_expression

   29 multiplicative_expression: cast_expression
   30                          | multiplicative_expression '*' cast_expression
   31                          | multiplicative_expression '/' cast_expression
   32                          | multiplicative_expression '%' cast_expression

   33 additive_expression: multiplicative_expression
   34                    | additive_expression '+' multiplicative_expression
   35                    | additive_expression '-' multiplicative_expression

   36 shift_expression: additive_expression
   37                 | shift_expression LEFT_OP additive_expression
   38                 | shift_expression RIGHT_OP additive_expression

   39 relational_expression: shift_expression
   40                      | relational_expression '<' shift_expression
   41                      | relational_expression '>' shift_expression
   42                      | relational_expression LE_OP shift_expression
   43                      | relational_expression GE_OP shift_expression

   44 equality_expression: relational_expression
   45                    | equality_expression EQ_OP relational_expression
   46                    | equality_expression NE_OP relational_expression

   47 and_expression: equality_expression
   48               | and_expression '&' equality_expression

   49 exclusive_or_expression: and_expression
   50                        | exclusive_or_expression '^' and_expression

   51 inclusive_or_expression: exclusive_or_expression
   52                        | inclusive_or_expression '|' exclusive_or_expression

   53 logical_and_expression: inclusive_or_expression
   54                       | logical_and_expression AND_OP inclusive_or_expression

   55 logical_or_expression: logical_and_expression
   56                      | logical_or_expression OR_OP logical_and_expression

   57 conditional_expression: logical_or_expression
   58                       | logical_or_expression '?' expression ':' conditional_expression

   59 assignment_expression: conditional_expression
   60                      | unary_expression assignment_operator assignment_expression

   61 assignment_operator: '='
   62                    | MUL_ASSIGN
   63                    | DIV_ASSIGN
   64                    | MOD_ASSIGN
   65                    | ADD_ASSIGN
   66                    | SUB_ASSIGN
   67                    | LEFT_ASSIGN
   68                    | RIGHT_ASSIGN
   69                    | AND_ASSIGN
   70                    | OR_ASSIGN

   71 expression: assignment_expression
   72           | expression ',' assignment_expression

   73 constant_expression: conditional_expression

   74 declaration_specifiers: type_specifier
   75                       | type_specifier declaration_specifiers

   76 declaration: declaration_specifiers ';'
   77            | declaration_specifiers init_declarator_list ';'

   78 init_declarator_list: init_declarator
   79                     | init_declarator_list ',' init_declarator

   80 init_declarator: declarator
   81                | declarator '=' initializer

   82 type_specifier: INT
   83               | FLOAT

   84 declarator: direct_declarator

   85 direct_declarator: IDENTIFIER
   86                  | '(' declarator ')'
   87                  | direct_declarator '[' assignment_expression ']'
   88                  | direct_declarator '[' '*' ']'
   89                  | direct_declarator '[' ']'
   90                  | direct_declarator '(' parameter_type_list ')'
   91                  | direct_declarator '(' identifier_list ')'
   92                  | direct_declarator '(' ')'

   93 parameter_type_list: parameter_list
   94                    | parameter_list ',' ELLIPSIS

   95 parameter_list: parameter_declaration
   96               | parameter_list ',' parameter_declaration

   97 parameter_declaration: declaration_specifiers declarator
   98                      | declaration_specifiers abstract_declarator
   99                      | declaration_specifiers

  100 identifier_list: IDENTIFIER
  101                | identifier_list ',' IDENTIFIER

  102 abstract_declarator: direct_abstract_declarator

  103 direct_abstract_declarator: '(' abstract_declarator ')'
  104                           | '[' ']'
  105                           | '[' assignment_expression ']'
  106                           | direct_abstract_declarator '[' ']'
  107                           | direct_abstract_declarator '[' assignment_expression ']'
  108                           | '[' '*' ']'
  109                           | direct_abstract_declarator '[' '*' ']'
  110                           | '(' ')'
  111                           | '(' parameter_type_list ')'
  112                           | direct_abstract_declarator '(' ')'
  113                           | direct_abstract_declarator '(' parameter_type_list ')'

  114 initializer: assignment_expression
  115            | '{' initializer_list '}'
  116            | '{' initializer_list ',' '}'

  117 initializer_list: initializer
  118                 | designation initializer
  119                 | initializer_list ',' initializer
  120                 | initializer_list ',' designation initializer

  121 designation: designator_list '='

  122 designator_list: designator
  123                | designator_list designator

  124 designator: '[' constant_expression ']'
  125           | '.' IDENTIFIER

  126 statement: compound_statement
  127          | expression_statement
  128          | selection_statement
  129          | iteration_statement
  130          | jump_statement

  131 compound_statement: '{' '}'
  132                   | '{' block_item_list '}'

  133 block_item_list: block_item
  134                | block_item_list block_item

  135 block_item: declaration
  136           | statement

  137 expression_statement: ';'
  138                     | expression ';'

  139 selection_statement: IF '(' expression ')' statement
  140                    | IF '(' expression ')' statement ELSE statement

  141 iteration_statement: WHILE '(' expression ')' statement
  142                    | DO statement WHILE '(' expression ')' ';'
  143                    | FOR '(' expression_statement expression_statement ')' statement
  144                    | FOR '(' expression_statement expression_statement expression ')' statement
  145                    | FOR '(' declaration expression_statement ')' statement
  146                    | FOR '(' declaration expression_statement expression ')' statement

  147 jump_statement: CONTINUE ';'
  148               | RETURN ';'
  149               | RETURN expression ';'

  150 translation_unit: external_declaration
  151                 | translation_unit external_declaration

  152 external_declaration: function_definition
  153                     | declaration

  154 function_definition: declaration_specifiers declarator declaration_list compound_statement
  155                    | declaration_specifiers declarator compound_statement

  156 declaration_list: declaration
  157                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 26
'%' (37) 32
'&' (38) 21 48
'(' (40) 4 7 8 13 14 28 86 90 91 92 103 110 111 112 113 139 140 141
    142 143 144 145 146
')' (41) 4 7 8 13 14 28 86 90 91 92 103 110 111 112 113 139 140 141
    142 143 144 145 146
'*' (42) 22 30 88 108 109
'+' (43) 23 34
',' (44) 14 16 72 79 94 96 101 116 119 120
'-' (45) 24 35
'.' (46) 9 125
'/' (47) 31
':' (58) 58
';' (59) 76 77 137 138 142 147 148 149
'<' (60) 40
'=' (61) 61 81 121
'>' (62) 41
'?' (63) 58
'[' (91) 6 87 88 89 104 105 106 107 108 109 124
']' (93) 6 87 88 89 104 105 106 107 108 109 124
'^' (94) 50
'{' (123) 13 14 115 116 131 132
'|' (124) 52
'}' (125) 13 14 115 116 131 132
'~' (126) 25
error (256)
IDENTIFIER (258) 1 9 10 85 100 101 125
CONSTANT (259) 2
STRING_LITERAL (260) 3
PTR_OP (261) 10
INC_OP (262) 11 18
DEC_OP (263) 12 19
LEFT_OP (264) 37
RIGHT_OP (265) 38
LE_OP (266) 42
GE_OP (267) 43
EQ_OP (268) 45
NE_OP (269) 46
AND_OP (270) 54
OR_OP (271) 56
MUL_ASSIGN (272) 62
DIV_ASSIGN (273) 63
MOD_ASSIGN (274) 64
ADD_ASSIGN (275) 65
SUB_ASSIGN (276) 66
LEFT_ASSIGN (277) 67
RIGHT_ASSIGN (278) 68
AND_ASSIGN (279) 69
OR_ASSIGN (280) 70
TYPE_NAME (281)
TYPEDEF (282)
EXTERN (283)
STATIC (284)
AUTO (285)
REGISTER (286)
CHAR (287)
SHORT (288)
INT (289) 82
LONG (290)
SIGNED (291)
UNSIGNED (292)
FLOAT (293) 83
DOUBLE (294)
CONST (295)
VOLATILE (296)
VOID (297)
STRUCT (298)
UNION (299)
ENUM (300)
ELLIPSIS (301) 94
CASE (302)
DEFAULT (303)
IF (304) 139 140
ELSE (305) 140
SWITCH (306)
WHILE (307) 141 142
DO (308) 142
FOR (309) 143 144 145 146
GOTO (310)
CONTINUE (311) 147
BREAK (312)
RETURN (313) 148 149
LOWER (314)


Nonterminals, with rules where they appear

$accept (84)
    on left: 0
primary_expression (85)
    on left: 1 2 3 4, on right: 5
postfix_expression (86)
    on left: 5 6 7 8 9 10 11 12 13 14, on right: 6 7 8 9 10 11 12 17
argument_expression_list (87)
    on left: 15 16, on right: 8 16
unary_expression (88)
    on left: 17 18 19 20, on right: 18 19 27 60
unary_operator (89)
    on left: 21 22 23 24 25 26, on right: 20
cast_expression (90)
    on left: 27 28, on right: 20 28 29 30 31 32
multiplicative_expression (91)
    on left: 29 30 31 32, on right: 30 31 32 33 34 35
additive_expression (92)
    on left: 33 34 35, on right: 34 35 36 37 38
shift_expression (93)
    on left: 36 37 38, on right: 37 38 39 40 41 42 43
relational_expression (94)
    on left: 39 40 41 42 43, on right: 40 41 42 43 44 45 46
equality_expression (95)
    on left: 44 45 46, on right: 45 46 47 48
and_expression (96)
    on left: 47 48, on right: 48 49 50
exclusive_or_expression (97)
    on left: 49 50, on right: 50 51 52
inclusive_or_expression (98)
    on left: 51 52, on right: 52 53 54
logical_and_expression (99)
    on left: 53 54, on right: 54 55 56
logical_or_expression (100)
    on left: 55 56, on right: 56 57 58
conditional_expression (101)
    on left: 57 58, on right: 58 59 73
assignment_expression (102)
    on left: 59 60, on right: 15 16 60 71 72 87 105 107 114
assignment_operator (103)
    on left: 61 62 63 64 65 66 67 68 69 70, on right: 60
expression (104)
    on left: 71 72, on right: 4 6 58 72 138 139 140 141 142 144 146
    149
constant_expression (105)
    on left: 73, on right: 124
declaration_specifiers (106)
    on left: 74 75, on right: 75 76 77 97 98 99 154 155
declaration (107)
    on left: 76 77, on right: 135 145 146 153 156 157
init_declarator_list (108)
    on left: 78 79, on right: 77 79
init_declarator (109)
    on left: 80 81, on right: 78 79
type_specifier (110)
    on left: 82 83, on right: 13 14 28 74 75
declarator (111)
    on left: 84, on right: 80 81 86 97 154 155
direct_declarator (112)
    on left: 85 86 87 88 89 90 91 92, on right: 84 87 88 89 90 91 92
parameter_type_list (113)
    on left: 93 94, on right: 90 111 113
parameter_list (114)
    on left: 95 96, on right: 93 94 96
parameter_declaration (115)
    on left: 97 98 99, on right: 95 96
identifier_list (116)
    on left: 100 101, on right: 91 101
abstract_declarator (117)
    on left: 102, on right: 98 103
direct_abstract_declarator (118)
    on left: 103 104 105 106 107 108 109 110 111 112 113, on right:
    102 106 107 109 112 113
initializer (119)
    on left: 114 115 116, on right: 81 117 118 119 120
initializer_list (120)
    on left: 117 118 119 120, on right: 13 14 115 116 119 120
designation (121)
    on left: 121, on right: 118 120
designator_list (122)
    on left: 122 123, on right: 121 123
designator (123)
    on left: 124 125, on right: 122 123
statement (124)
    on left: 126 127 128 129 130, on right: 136 139 140 141 142 143
    144 145 146
compound_statement (125)
    on left: 131 132, on right: 126 154 155
block_item_list (126)
    on left: 133 134, on right: 132 134
block_item (127)
    on left: 135 136, on right: 133 134
expression_statement (128)
    on left: 137 138, on right: 127 143 144 145 146
selection_statement (129)
    on left: 139 140, on right: 128
iteration_statement (130)
    on left: 141 142 143 144 145 146, on right: 129
jump_statement (131)
    on left: 147 148 149, on right: 130
translation_unit (132)
    on left: 150 151, on right: 0 151
external_declaration (133)
    on left: 152 153, on right: 150 151
function_definition (134)
    on left: 154 155, on right: 152
declaration_list (135)
    on left: 156 157, on right: 154 157


state 0

    0 $accept: . translation_unit $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2

    declaration_specifiers  go to state 3
    declaration             go to state 4
    type_specifier          go to state 5
    translation_unit        go to state 6
    external_declaration    go to state 7
    function_definition     go to state 8


state 1

   82 type_specifier: INT .

    $default  reduce using rule 82 (type_specifier)


state 2

   83 type_specifier: FLOAT .

    $default  reduce using rule 83 (type_specifier)


state 3

   76 declaration: declaration_specifiers . ';'
   77            | declaration_specifiers . init_declarator_list ';'
  154 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  155                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 9
    '('         shift, and go to state 10
    ';'         shift, and go to state 11

    init_declarator_list  go to state 12
    init_declarator       go to state 13
    declarator            go to state 14
    direct_declarator     go to state 15


state 4

  153 external_declaration: declaration .

    $default  reduce using rule 153 (external_declaration)


state 5

   74 declaration_specifiers: type_specifier .
   75                       | type_specifier . declaration_specifiers

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2

    $default  reduce using rule 74 (declaration_specifiers)

    declaration_specifiers  go to state 16
    type_specifier          go to state 5


state 6

    0 $accept: translation_unit . $end
  151 translation_unit: translation_unit . external_declaration

    $end   shift, and go to state 17
    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2

    declaration_specifiers  go to state 3
    declaration             go to state 4
    type_specifier          go to state 5
    external_declaration    go to state 18
    function_definition     go to state 8


state 7

  150 translation_unit: external_declaration .

    $default  reduce using rule 150 (translation_unit)


state 8

  152 external_declaration: function_definition .

    $default  reduce using rule 152 (external_declaration)


state 9

   85 direct_declarator: IDENTIFIER .

    $default  reduce using rule 85 (direct_declarator)


state 10

   86 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 9
    '('         shift, and go to state 10

    declarator         go to state 19
    direct_declarator  go to state 15


state 11

   76 declaration: declaration_specifiers ';' .

    $default  reduce using rule 76 (declaration)


state 12

   77 declaration: declaration_specifiers init_declarator_list . ';'
   79 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 20
    ';'  shift, and go to state 21


state 13

   78 init_declarator_list: init_declarator .

    $default  reduce using rule 78 (init_declarator_list)


state 14

   80 init_declarator: declarator .
   81                | declarator . '=' initializer
  154 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  155                    | declaration_specifiers declarator . compound_statement

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    '{'    shift, and go to state 22
    '='    shift, and go to state 23

    $default  reduce using rule 80 (init_declarator)

    declaration_specifiers  go to state 24
    declaration             go to state 25
    type_specifier          go to state 5
    compound_statement      go to state 26
    declaration_list        go to state 27


state 15

   84 declarator: direct_declarator .
   87 direct_declarator: direct_declarator . '[' assignment_expression ']'
   88                  | direct_declarator . '[' '*' ']'
   89                  | direct_declarator . '[' ']'
   90                  | direct_declarator . '(' parameter_type_list ')'
   91                  | direct_declarator . '(' identifier_list ')'
   92                  | direct_declarator . '(' ')'

    '('  shift, and go to state 28
    '['  shift, and go to state 29

    $default  reduce using rule 84 (declarator)


state 16

   75 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 75 (declaration_specifiers)


state 17

    0 $accept: translation_unit $end .

    $default  accept


state 18

  151 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 151 (translation_unit)


state 19

   86 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 30


state 20

   79 init_declarator_list: init_declarator_list ',' . init_declarator

    IDENTIFIER  shift, and go to state 9
    '('         shift, and go to state 10

    init_declarator    go to state 31
    declarator         go to state 32
    direct_declarator  go to state 15


state 21

   77 declaration: declaration_specifiers init_declarator_list ';' .

    $default  reduce using rule 77 (declaration)


state 22

  131 compound_statement: '{' . '}'
  132                   | '{' . block_item_list '}'

    IDENTIFIER      shift, and go to state 33
    CONSTANT        shift, and go to state 34
    STRING_LITERAL  shift, and go to state 35
    INC_OP          shift, and go to state 36
    DEC_OP          shift, and go to state 37
    INT             shift, and go to state 1
    FLOAT           shift, and go to state 2
    IF              shift, and go to state 38
    WHILE           shift, and go to state 39
    DO              shift, and go to state 40
    FOR             shift, and go to state 41
    CONTINUE        shift, and go to state 42
    RETURN          shift, and go to state 43
    '('             shift, and go to state 44
    '{'             shift, and go to state 22
    '}'             shift, and go to state 45
    '&'             shift, and go to state 46
    '*'             shift, and go to state 47
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '~'             shift, and go to state 50
    '!'             shift, and go to state 51
    ';'             shift, and go to state 52

    primary_expression         go to state 53
    postfix_expression         go to state 54
    unary_expression           go to state 55
    unary_operator             go to state 56
    cast_expression            go to state 57
    multiplicative_expression  go to state 58
    additive_expression        go to state 59
    shift_expression           go to state 60
    relational_expression      go to state 61
    equality_expression        go to state 62
    and_expression             go to state 63
    exclusive_or_expression    go to state 64
    inclusive_or_expression    go to state 65
    logical_and_expression     go to state 66
    logical_or_expression      go to state 67
    conditional_expression     go to state 68
    assignment_expression      go to state 69
    expression                 go to state 70
    declaration_specifiers     go to state 24
    declaration                go to state 71
    type_specifier             go to state 5
    statement                  go to state 72
    compound_statement         go to state 73
    block_item_list            go to state 74
    block_item                 go to state 75
    expression_statement       go to state 76
    selection_statement        go to state 77
    iteration_statement        go to state 78
    jump_statement             go to state 79


state 23

   81 init_declarator: declarator '=' . initializer

    IDENTIFIER      shift, and go to state 33
    CONSTANT        shift, and go to state 34
    STRING_LITERAL  shift, and go to state 35
    INC_OP          shift, and go to state 36
    DEC_OP          shift, and go to state 37
    '('             shift, and go to state 44
    '{'             shift, and go to state 80
    '&'             shift, and go to state 46
    '*'             shift, and go to state 47
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '~'             shift, and go to state 50
    '!'             shift, and go to state 51

    primary_expression         go to state 53
    postfix_expression         go to state 54
    unary_expression           go to state 55
    unary_operator             go to state 56
    cast_expression            go to state 57
    multiplicative_expression  go to state 58
    additive_expression        go to state 59
    shift_expression           go to state 60
    relational_expression      go to state 61
    equality_expression        go to state 62
    and_expression             go to state 63
    exclusive_or_expression    go to state 64
    inclusive_or_expression    go to state 65
    logical_and_expression     go to state 66
    logical_or_expression      go to state 67
    conditional_expression     go to state 68
    assignment_expression      go to state 81
    initializer                go to state 82


state 24

   76 declaration: declaration_specifiers . ';'
   77            | declaration_specifiers . init_declarator_list ';'

    IDENTIFIER  shift, and go to state 9
    '('         shift, and go to state 10
    ';'         shift, and go to state 11

    init_declarator_list  go to state 12
    init_declarator       go to state 13
    declarator            go to state 32
    direct_declarator     go to state 15


state 25

  156 declaration_list: declaration .

    $default  reduce using rule 156 (declaration_list)


state 26

  155 function_definition: declaration_specifiers declarator compound_statement .

    $default  reduce using rule 155 (function_definition)


state 27

  154 function_definition: declaration_specifiers declarator declaration_list . compound_statement
  157 declaration_list: declaration_list . declaration

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    '{'    shift, and go to state 22

    declaration_specifiers  go to state 24
    declaration             go to state 83
    type_specifier          go to state 5
    compound_statement      go to state 84


state 28

   90 direct_declarator: direct_declarator '(' . parameter_type_list ')'
   91                  | direct_declarator '(' . identifier_list ')'
   92                  | direct_declarator '(' . ')'

    IDENTIFIER  shift, and go to state 85
    INT         shift, and go to state 1
    FLOAT       shift, and go to state 2
    ')'         shift, and go to state 86

    declaration_specifiers  go to state 87
    type_specifier          go to state 5
    parameter_type_list     go to state 88
    parameter_list          go to state 89
    parameter_declaration   go to state 90
    identifier_list         go to state 91


state 29

   87 direct_declarator: direct_declarator '[' . assignment_expression ']'
   88                  | direct_declarator '[' . '*' ']'
   89                  | direct_declarator '[' . ']'

    IDENTIFIER      shift, and go to state 33
    CONSTANT        shift, and go to state 34
    STRING_LITERAL  shift, and go to state 35
    INC_OP          shift, and go to state 36
    DEC_OP          shift, and go to state 37
    '('             shift, and go to state 44
    ']'             shift, and go to state 92
    '&'             shift, and go to state 46
    '*'             shift, and go to state 93
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '~'             shift, and go to state 50
    '!'             shift, and go to state 51

    primary_expression         go to state 53
    postfix_expression         go to state 54
    unary_expression           go to state 55
    unary_operator             go to state 56
    cast_expression            go to state 57
    multiplicative_expression  go to state 58
    additive_expression        go to state 59
    shift_expression           go to state 60
    relational_expression      go to state 61
    equality_expression        go to state 62
    and_expression             go to state 63
    exclusive_or_expression    go to state 64
    inclusive_or_expression    go to state 65
    logical_and_expression     go to state 66
    logical_or_expression      go to state 67
    conditional_expression     go to state 68
    assignment_expression      go to state 94


state 30

   86 direct_declarator: '(' declarator ')' .

    $default  reduce using rule 86 (direct_declarator)


state 31

   79 init_declarator_list: init_declarator_list ',' init_declarator .

    $default  reduce using rule 79 (init_declarator_list)


state 32

   80 init_declarator: declarator .
   81                | declarator . '=' initializer

    '='  shift, and go to state 23

    $default  reduce using rule 80 (init_declarator)


state 33

    1 primary_expression: IDENTIFIER .

    $default  reduce using rule 1 (primary_expression)


state 34

    2 primary_expression: CONSTANT .

    $default  reduce using rule 2 (primary_expression)


state 35

    3 primary_expression: STRING_LITERAL .

    $default  reduce using rule 3 (primary_expression)


state 36

   18 unary_expression: INC_OP . unary_expression

    IDENTIFIER      shift, and go to state 33
    CONSTANT        shift, and go to state 34
    STRING_LITERAL  shift, and go to state 35
    INC_OP          shift, and go to state 36
    DEC_OP          shift, and go to state 37
    '('             shift, and go to state 95
    '&'             shift, and go to state 46
    '*'             shift, and go to state 47
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '~'             shift, and go to state 50
    '!'             shift, and go to state 51

    primary_expression  go to state 53
    postfix_expression  go to state 54
    unary_expression    go to state 96
    unary_operator      go to state 56


state 37

   19 unary_expression: DEC_OP . unary_expression

    IDENTIFIER      shift, and go to state 33
    CONSTANT        shift, and go to state 34
    STRING_LITERAL  shift, and go to state 35
    INC_OP          shift, and go to state 36
    DEC_OP          shift, and go to state 37
    '('             shift, and go to state 95
    '&'             shift, and go to state 46
    '*'             shift, and go to state 47
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '~'             shift, and go to state 50
    '!'             shift, and go to state 51

    primary_expression  go to state 53
    postfix_expression  go to state 54
    unary_expression    go to state 97
    unary_operator      go to state 56


state 38

  139 selection_statement: IF . '(' expression ')' statement
  140                    | IF . '(' expression ')' statement ELSE statement

    '('  shift, and go to state 98


state 39

  141 iteration_statement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 99


state 40

  142 iteration_statement: DO . statement WHILE '(' expression ')' ';'

    IDENTIFIER      shift, and go to state 33
    CONSTANT        shift, and go to state 34
    STRING_LITERAL  shift, and go to state 35
    INC_OP          shift, and go to state 36
    DEC_OP          shift, and go to state 37
    IF              shift, and go to state 38
    WHILE           shift, and go to state 39
    DO              shift, and go to state 40
    FOR             shift, and go to state 41
    CONTINUE        shift, and go to state 42
    RETURN          shift, and go to state 43
    '('             shift, and go to state 44
    '{'             shift, and go to state 22
    '&'             shift, and go to state 46
    '*'             shift, and go to state 47
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '~'             shift, and go to state 50
    '!'             shift, and go to state 51
    ';'             shift, and go to state 52
